--- a/my-site/src/components/pages/kenna.css
+++ b/my-site/src/components/pages/kenna.css
@@ -1,4 +1,4 @@
-#kenna{
+#kenna {
     display: flex;
     text-align: center;
     justify-content: center;
@@ -6,22 +6,22 @@
     color: red;
 }
 
-#workterm-buttons{
+#workterm-buttons {
     display: flex;
     text-align: center;
     justify-content: center;
     align-items: center;
-    
+
 }
 
-#scroll{
+#scroll {
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 30px;
-    
+
 }
 
-#workterm-buttons button{
+#workterm-buttons button {
     padding: 10px;
     background-color: #FAF9F6;
     border-style: none;
@@ -29,25 +29,86 @@
     font-size: 20px;
 }
 
-#workterm-buttons button:hover{
+#workterm-buttons button:hover {
     padding: 10px;
     background-color: #FAF9F6;
     border-style: none;
     transform: scale(1.15);
 }
 
-#group-photo{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 500px;
+#group-photo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 50%;
+    height: auto;
 }
 
-/* #text{
+#pretext {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    flex-direction: column;
 
-} */
+}
+
+#pretext p {
+    width: 70%;
+}
+
+#term-header{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#wt1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#description{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#description p{
+    width: 70%;
+}
+
+#goals{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#goals p{
+    width: 70%;
+}
+
+#goals h3{
+    text-align: left;
+    font-size: 15px;
+    width: 70%;
+}
+
+#term-header{
+    color: red;
+}
+
+#ca{
+    display: flex;
+    text-align: left;
+    align-items: center;
+    flex-direction: column; 
+}
+
+#ca img{
+    width: 200px;
+    float: left;
+}
