--- a/my-site/src/components/pages/kenna.css
+++ b/my-site/src/components/pages/kenna.css
@@ -1,4 +1,3 @@
-/* clean up CSS to be less repetitive */
 #kenna-header {
     display: flex;
     text-align: center;
@@ -37,7 +36,7 @@
     transform: scale(1.15);
 }
 
-#group-photo {
+#kenna-img {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -45,7 +44,7 @@
     height: auto;
 }
 
-#pretext {
+.text-sections {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -53,73 +52,14 @@
 
 }
 
-#pretext p {
+.text-sections p {
     width: 70%;
-}
-
-#kenna-rainbow {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 50%;
-    height: auto;
 }
 
 #term-header {
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-#wt1 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-
-#description {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-
-#description2 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-
-#description p {
-    width: 70%;
-}
-
-#description2 p {
-    width: 70%;
-}
-
-#goals {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-
-#goals2 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-
-#goals p {
-    width: 70%;
-}
-
-#goals2 p {
-    width: 70%;
 }
 
 #goals h3 {
@@ -134,32 +74,10 @@
     width: 70%;
 }
 
-#baseball {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 50%;
-    height: auto;
-}
-
 
 #term-header {
     color: rgb(213, 0, 0);
 }
 
-#ca {
-    display: flex;
-    text-align: left;
-    align-items: center;
-    flex-direction: column;
-}
-
-#ca p {
-    width: 70%;
-}
 
 
-#ca img {
-    width: 200px;
-    float: left;
-}
