--- a/my-site/src/components/pages/kenna.css
+++ b/my-site/src/components/pages/kenna.css
@@ -6,12 +6,29 @@
     color: rgb(213, 0, 0);
 }
 
+.kenna-header2 {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
 #workterm-buttons {
     display: flex;
     text-align: center;
     justify-content: center;
     align-items: center;
 
+}
+
+#kenna-img {
+    /* display: block; */
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 50%;
+    height: auto; 
+    vertical-align: middle;
+    
 }
 
 #scroll {
@@ -36,25 +53,21 @@
     transform: scale(1.15);
 }
 
-#kenna-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 50%;
-    height: auto;
-}
 
 .text-sections {
     display: flex;
-    align-items: center;
+    text-align: left;
     justify-content: center;
-    flex-direction: column;
 
 }
+
+
 
 .text-sections p {
     width: 70%;
 }
+
+
 
 #term-header {
     display: flex;
@@ -77,6 +90,15 @@
 
 #term-header {
     color: rgb(213, 0, 0);
+}
+
+@media (max-width: 950px) {
+    .text-sections {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
 }
 
 
