--- a/my-site/src/App.css
+++ b/my-site/src/App.css
@@ -1,12 +1,12 @@
-body{
+body {
     background-color: #FAF9F6;
     font-family: 'Poppins';
-    /* display: flex;
-    flex-direction: column; */
-    min-height: 100vh;
+    /* min-height: 100vh; */
+    margin: 0;
+    padding: 0;
+    height: 100%;
 }
 
-/* .app{
-    flex: 1;
-    padding: 20px;
-} */
+#footer {
+    padding-bottom: 100px;
+}
