--- a/my-site/src/components/Contact.css
+++ b/my-site/src/components/Contact.css
@@ -1,3 +1,30 @@
 #contact{
-   padding-top: 50px;
+   padding-top: 20px;
+   background-color: #b9d4a0;
+   width: 100%;
 }
+
+#footer{
+   display: flex;
+   padding-left: 60px;
+}
+
+#footer p{
+   text-align: left;
+   width: 70%;
+   font-size: 16px;
+}
+
+#socials{
+   padding-top: 25px;
+   padding-left: 10px;
+   font-size: 30px;
+   color: black;
+
+}
+
+#socials:hover{
+   color: rgba(0, 0, 0, 0.703);
+}
+
+
