--- a/my-site/src/components/pages/home.css
+++ b/my-site/src/components/pages/home.css
@@ -66,3 +66,14 @@ h1{
     }
 
 }
+
+@media only screen and (max-width: 320px) {
+    h1{
+        font-size: 30px;
+    }
+
+    #body p{
+        width: 70%;
+        font-size: 15px;
+    }
+}
