--- a/my-site/src/components/pages/kenna.css
+++ b/my-site/src/components/pages/kenna.css
@@ -79,7 +79,7 @@
     color: rgb(213, 0, 0);
 }
 
-@media (max-width: 950px) {
+@media (max-width: 320px) {
 
     #workterm-buttons button {
         font-size: 15px;
@@ -89,6 +89,23 @@
         font-size: 10px;
     }
 
+    #scroll button{
+        font-size: 10px;
+    }
+
+    #term-header{
+        text-align: center;
+    }
+
+
+    /* #goal-header{
+        font-size: 100px;
+    } */
+
+    #reflection-header{
+        text-align: center;
+        font-size: 20px;
+    }
 
 
 }
