--- a/my-site/src/components/pages/projects.css
+++ b/my-site/src/components/pages/projects.css
@@ -51,6 +51,9 @@
         align-items: center;
     }
 
+}
+
+@media (max-width: 320px) {
     #featured{
         text-align: center;
         font-size: 20px;
