--- a/my-site/src/components/Contact.css
+++ b/my-site/src/components/Contact.css
@@ -1,33 +1,30 @@
-#contact{
-   padding-top: 150px;
+#contact {
    width: 100%;
+   display: inline-flex;
+   
 }
 
-#footer{
-   display: flex;
-   padding-left: 60px;
-}
-
-#footer p{
+#footer p {
    text-align: left;
    width: 70%;
    font-size: 16px;
+   color: gray;
 }
 
-#socials{
+#socials {
    padding-top: 25px;
    padding-left: 10px;
    font-size: 30px;
-   color: black;
+   color: gray;
 
 }
 
-#socials:hover{
+#socials:hover {
    color: rgba(0, 0, 0, 0.703);
 }
 
 @media (max-width: 650px) {
-   #footer{
+   #footer {
       display: flex;
       justify-content: center;
       align-items: center;
