--- a/my-site/src/components/pages/experience.css
+++ b/my-site/src/components/pages/experience.css
@@ -5,10 +5,11 @@ h1{
     padding-top: 20px;
 }
 
-#buttons{
+#buttons-kenna{
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-bottom: 150px;
 }
 
 .link{
