--- a/my-site/src/components/pages/home.css
+++ b/my-site/src/components/pages/home.css
@@ -11,6 +11,7 @@ h1{
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 
 #pfp{
@@ -25,6 +26,7 @@ h1{
     display: flex;
     text-align: left;
     justify-content: center;
+    padding-bottom: 300px;
 
 }
 
