scrapped idea of footer

--- a/my-site/src/components/Contact.css
+++ b/my-site/src/components/Contact.css
@@ -1,4 +1,5 @@
-#contact {
+/* //use if decide to make footer across all pages  */
+/* #contact {
    width: 100%;
    display: inline-flex;
    
@@ -32,4 +33,4 @@
    }
 
 
-}
+} */
