--- a/my-site/src/components/pages/home.css
+++ b/my-site/src/components/pages/home.css
@@ -26,7 +26,6 @@ h1{
     display: flex;
     text-align: left;
     justify-content: center;
-    padding-bottom: 300px;
 
 }
 
@@ -34,6 +33,20 @@ h1{
     width: 70%;
     font-size: 20px;
 }
+
+
+#socials {
+    padding-top: 18px;
+    padding-left: 10px;
+    font-size: 30px;
+    color: gray;
+ 
+ }
+
+ #socials:hover {
+    color: rgba(0, 0, 0, 0.703);
+ }
+
 
 #cs{
     color: purple;
@@ -61,7 +74,7 @@ h1{
 }
 
 @media (max-width: 950px) {
-    #body {
+    #body{
         display: flex;
         flex-direction: column;
         align-items: center;
